# find-superquadric

./: .gitpod.yml  CMakeLists.txt  README.md
data/: box  car  cleanser  cylinder  toy
src/: main.cpp  nlp.cpp  nlp.h  superquadric.cpp  superquadric.h
